# moka-django

./: .gitignore  LICENSE  README.md  pyproject.toml  runtests.py
moka_django/: __init__.py  admin.py  apps.py  client.py  conf.py  models.py  payments.py  signals.py  urls.py  views.py
moka_django/migrations/: 0001_initial.py
tests/: helpers.py  settings.py  test_all_cards.py  test_callback.py  test_conf.py  test_models.py  test_payments.py  urls.py
