[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moka-django"
version = "1.0.2"
description = "Moka United sanal POS entegrasyonu için Django uygulaması. Bu kütüphane bağımsız olarak geliştirilmiştir; Moka United'ın resmi ürünü değildir, Moka United tarafından geliştirilmemiş, onaylanmamış ve desteklenmemektedir."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hasan Cagri Gungor", email = "hasancagrigungor@gmail.com" },
]
requires-python = ">=3.8"
keywords = ["moka", "moka united", "django", "sanal pos", "odeme", "payment", "virtual pos", "turkey"]
dependencies = [
    "Django>=3.2",
    "moka-python>=1.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]

[project.urls]
Homepage = "https://github.com/hasancagrigungor/moka-django"
Documentation = "https://github.com/hasancagrigungor/moka-django#readme"
Source = "https://github.com/hasancagrigungor/moka-django"
Issues = "https://github.com/hasancagrigungor/moka-django/issues"
"Moka United API" = "https://developer.mokaunited.com"

[tool.setuptools]
packages = ["moka_django", "moka_django.migrations"]
